Fix overflow on chat

--- a/projects/frontend/src/app/views/project-chat/project-chat.component.css
+++ b/projects/frontend/src/app/views/project-chat/project-chat.component.css
@@ -1,3 +1,3 @@
 :host {
-  @apply w-full h-full overflow-auto;
+  @apply w-full h-full flex flex-col;
 }
